# CCBS-CT

./: .gitignore  .vimspector.json  CMakeLists.txt  README.md  cbs.cpp  cbs.h  check.py  check_conf.py  config.cpp  config.h  const.h  cpool.h  edgeSpliter.cpp  edgeSpliter.h  handyFunc.cpp  handyFunc.h  heuristic.cpp  heuristic.h  logger.cpp  logger.h  main.cpp  map.cpp  map.h  node_pool.cpp  node_pool.h  sipp.cpp  sipp.h  structs.h  task.cpp  task.h  test.py  test_result.txt  vigdb  xml_logger.h
Examples/: temp.txt  temp.xml  txt2map.py
Instances/: 16_task.task
debug/: CCBS  CMakeCache.txt  CT_tree.dot  Makefile  cmake_install.cmake  paths.txt  sparse.csv
experiments/: CT_tree.dot  check.py  config.json  dense.csv  disjoint+edge.csv  disjoint.csv  errors.txt  findERROR.py  log.txt  mayGodSaveMe.py  nondisjoint+edge.csv  nondisjoint.csv  plots.m  run.py  run2.py  runCMD.py  sparse-0-0-0-0.csv  sparse-0-0-0.csv  sparse-0-0-ds-0.csv  sparse-0-0-ds-icp.csv  sparse-0-0-ds.csv  sparse-0-cr-0.csv  sparse-0-cr-ds.csv  sparse-0-ct-ds-0.csv  sparse-0-ct_abs-ds-0.csv  sparse-0-ct_abs-ds-icp.csv  sparse-0-icp-ds.csv  sparse.csv  split.py  super-dense.csv  temp.m  temp.txt  tempAnaly.py  test.csv  untitled.m  w.py
release/: CCBS  CMakeCache.txt  Makefile  cmake_install.cmake  sparse.csv
visulizer/: DS.solution  DSCT.solution  DS_small.solution  calcNewP.asv  calcNewP.m  case11_CR_ES.txt  case11_CR_ES_DS.txt  case11_ES_CR.txt  case11_ES_DS.txt  case12.txt  case13_CR_DS.txt  edges.csv  init  init_small.solution  log.py  map.graph  map.py  newNode.csv  newNode_CR_ES.csv  newNode_CR_ES_DS.csv  newNodes_ES_CR.csv  newNodes_ES_DS.csv  nodes.csv  our.solution  paths.txt  plotCases.m  problem.solution  sim2move.m  solution.py  task.csv  (+6 more)
(+1162 files in other folders)
